Add a border to the docs sidebar area

--- a/assetsSource/css/layout/Docs/Docs.0900.pcss
+++ b/assetsSource/css/layout/Docs/Docs.0900.pcss
@@ -1,5 +1,6 @@
 .DocsHeader,
 .DocsAside {
+    border-right: 1px solid var(--lighterGray);
     left: 0;
     position: fixed;
     top: 0;
@@ -8,7 +9,7 @@
 
 .DocsAside {
     height: calc(100% - 46px);
-    overflow: scroll;
+    overflow-y: scroll;
     top: 46px;
 
     -webkit-overflow-scrolling: touch;
