--- a/assetsSource/css/layout/Docs/Docs.0900.pcss
+++ b/assetsSource/css/layout/Docs/Docs.0900.pcss
@@ -9,7 +9,7 @@
 
 .DocsAside {
     height: calc(100% - 46px);
-    overflow-y: scroll;
+    overflow-y: auto;
     top: 46px;
 
     -webkit-overflow-scrolling: touch;
