Switch the front matter parser to use github flavored markdown

--- a/templates/_core/PageDocs.twig
+++ b/templates/_core/PageDocs.twig
@@ -99,7 +99,7 @@
                     </h2>
                 {% endif %}
                 <div class="DocsContent__SectionInner">
-                    {{ section.markdown|markdown('gfm')|typeset }}
+                    {{ section.html|typeset }}
                 </div>
             </div>
         {% endfor %}
