--- a/assetsSource/css/layout/NavBar/NavBar.0000.pcss
+++ b/assetsSource/css/layout/NavBar/NavBar.0000.pcss
@@ -131,6 +131,21 @@
 
 .NavBar__RightHandControlLink {
     padding: 6px;
+    position: relative;
+}
+
+.NavBar__RightHandControlLinkCountOverlay {
+    background-color: var(--lighterOrange);
+    border-radius: 10px;
+    color: #fff;
+    display: block;
+    font-size: 10px;
+    line-height: 1;
+    padding: 3px 6px;
+    position: absolute;
+    right: 2px;
+    text-decoration: none;
+    top: 0;
 }
 
 .NavBar__Icon {
