Add cart count JS functionality

--- a/templates/_partials/SiteHeader.twig
+++ b/templates/_partials/SiteHeader.twig
@@ -88,7 +88,7 @@
             <li class="NavBar__RightHandControlItem">
                 <a href="/cart" class="NavBar__RightHandControlLink NavBar__IconParentHover" title="Cart">
                     <span class="HideElement">Cart</span>
-                    <span class="NavBar__RightHandControlLinkCountOverlay" style="display: none;">0</span>
+                    <span class="NavBar__RightHandControlLinkCountOverlay JSCartCount" style="display: none;">0</span>
                     <span class="NavBar__Icon">
                         {% include '_icons/icon-cart.svg' %}
                     </span>
