Adjust a changelog styling issue

--- a/assetsSource/css/layout/Docs/Docs.0000.pcss
+++ b/assetsSource/css/layout/Docs/Docs.0000.pcss
@@ -156,6 +156,10 @@
     margin-top: 80px;
 }
 
+.DocsContent__Section .ChangelogMarkdownWrapper {
+    margin-top: -80px;
+}
+
 .DocsContent__Section:not(:last-child) {
     border-bottom: 1px solid var(--orange);
     padding-bottom: 60px;
