Add an auto alternate color block stule

--- a/assetsSource/css/blocks/BlockStandard/BlockStandard.0000.pcss
+++ b/assetsSource/css/blocks/BlockStandard/BlockStandard.0000.pcss
@@ -55,8 +55,14 @@
  * Background Modifiers
  */
 
+.ContentBlock--HasAlternatingBgColor:nth-child(even) *,
 .ContentBlock--HasBgColor-Green * {
     color: #fff;
+}
+
+.ContentBlock--HasAlternatingBgColor:nth-child(even) code,
+.ContentBlock--HasBgColor-Green code {
+    color: #404040;
 }
 
 
