--- a/assetsSource/css/blocks/_ContentBlock/ContentBlock.0000.pcss
+++ b/assetsSource/css/blocks/_ContentBlock/ContentBlock.0000.pcss
@@ -2,6 +2,7 @@
     background-color: var(--lighterGray);
 }
 
+.ContentBlock--HasAlternatingBgColor:nth-child(even),
 .ContentBlock--HasBgColor-Green {
     background-color: var(--green);
 }
