--- a/templates/_core/Cart.twig
+++ b/templates/_core/Cart.twig
@@ -4,39 +4,42 @@
     <div class="Cart">
         <div class="Cart__Inner">
             <div class="Cart__Checkout">
-                <div class="Cart__Checkout__Inner">
+                <div class="Cart__CheckoutInner">
                     <form action="#TODO" class="CheckoutForm">
                         <section class="CheckoutForm__Section">
                             <h2 class="CheckoutForm__SectionHeader">Billing</h2>
-                            <label class="label CheckoutForm__Label">
+                            <label class="label CheckoutForm__Label CheckoutForm__Label--Required">
                                 Email Address
                                 <input
                                     type="text"
                                     class="input CheckoutForm__Input"
                                     placeholder="johnsmith@emailprovider.com"
+                                    required
                                 >
                             </label>
-                            <label class="label CheckoutForm__Label">
+                            <label class="label CheckoutForm__Label CheckoutForm__Label--Required">
                                 Phone Number
                                 <input
                                     type="text"
                                     class="input CheckoutForm__Input"
                                     placeholder="123-555-1212"
+                                    required
                                 >
                             </label>
-                            <label class="label CheckoutForm__Label">
+                            <label class="label CheckoutForm__Label CheckoutForm__Label--Required">
                                 Country
-                                <select class="select CheckoutForm__Select">
+                                <select class="select CheckoutForm__Select" required>
                                     <option value="USA">United States</option>
                                     <option value="OTHER">Other</option>
                                 </select>
                             </label>
-                            <label class="label CheckoutForm__Label">
+                            <label class="label CheckoutForm__Label CheckoutForm__Label--Required">
                                 Full Name
                                 <input
                                     type="text"
                                     class="input CheckoutForm__Input"
                                     placeholder="John Smith"
+                                    required
                                 >
                             </label>
                             <label class="label CheckoutForm__Label">
@@ -47,12 +50,13 @@
                                     placeholder="BuzzingPixel, LLC"
                                 >
                             </label>
-                            <label class="label CheckoutForm__Label">
+                            <label class="label CheckoutForm__Label CheckoutForm__Label--Required">
                                 Address
                                 <input
                                     type="text"
                                     class="input CheckoutForm__Input"
                                     placeholder="123 Some Street"
+                                    required
                                 >
                             </label>
                             <label class="label CheckoutForm__Label">
@@ -63,28 +67,64 @@
                                     placeholder="Suite 201"
                                 >
                             </label>
-                            <label class="label CheckoutForm__Label">
+                            <label class="label CheckoutForm__Label CheckoutForm__Label--Required">
                                 City
                                 <input
                                     type="text"
                                     class="input CheckoutForm__Input"
                                     placeholder="Metropolis"
+                                    required
                                 >
                             </label>
-                            <label class="label CheckoutForm__Label">
-                                State
-                                <select class="select CheckoutForm__Select">
+                            <label class="label CheckoutForm__Label CheckoutForm__Label--Required">
+                                State/Province
+                                <select class="select CheckoutForm__Select" required>
                                     <option value="TN">Tennessee</option>
                                     <option value="OTHER">Other</option>
                                 </select>
                             </label>
-                            <label class="label CheckoutForm__Label">
+                            <label class="label CheckoutForm__Label CheckoutForm__Label--Required">
                                 Postal Code
                                 <input
                                     type="text"
                                     class="input CheckoutForm__Input"
                                     placeholder="12345"
+                                    required
                                 >
+                            </label>
+                        </section>
+                        <section class="CheckoutForm__Section">
+                            <h2 class="CheckoutForm__SectionHeader">Payment</h2>
+                            <label class="label CheckoutForm__Label CheckoutForm__Label--Required">
+                                Credit Card Number
+                                <input
+                                    type="text"
+                                    class="input CheckoutForm__Input JSCreditCardNumber"
+                                    placeholder="5530 8628 8440 9534"
+                                    required
+                                >
+                            </label>
+                            <label class="label CheckoutForm__Label CheckoutForm__Label--Required">
+                                Security Code
+                                <input
+                                    type="text"
+                                    class="input CheckoutForm__Input "
+                                    placeholder="543"
+                                    required
+                                >
+                            </label>
+                            <label class="label CheckoutForm__Label CheckoutForm__Label--Required">
+                                Expiration
+                                <select class="select CheckoutForm__Select" required>
+                                    <option value="" disabled selected>Select Month</option>
+                                    <option value="0">April</option>
+                                    <option value="OTHER">Other</option>
+                                </select>
+                                <select class="select CheckoutForm__Select" required>
+                                    <option value="" disabled selected>Select Year</option>
+                                    <option value="2018">2018</option>
+                                    <option value="OTHER">Other</option>
+                                </select>
                             </label>
                         </section>
                     </form>
@@ -121,6 +161,30 @@
                 </div>
                 <div class="Cart__ItemsContainer">
                     <ul class="Cart__Items">
+                        <li class="Cart__Item">
+                            <div class="Cart__ItemTitle">Some Item</div>
+                            <form class="Cart__ItemMeta">
+                                <div class="Cart__ItemMetaPrice">$79.00</div>
+                                <div class="Cart__ItemMetaQty">
+                                    <input type="text" class="input Cart__ItemMetaQtyInput">
+                                </div>
+                                <div class="Cart__ItemMetaUpdateBtn">
+                                    <input class="button cart__item-update-submit" type="submit" value="Update">
+                                </div>
+                            </form>
+                        </li>
+                        <li class="Cart__Item">
+                            <div class="Cart__ItemTitle">Some Item</div>
+                            <form class="Cart__ItemMeta">
+                                <div class="Cart__ItemMetaPrice">$79.00</div>
+                                <div class="Cart__ItemMetaQty">
+                                    <input type="text" class="input Cart__ItemMetaQtyInput">
+                                </div>
+                                <div class="Cart__ItemMetaUpdateBtn">
+                                    <input class="button cart__item-update-submit" type="submit" value="Update">
+                                </div>
+                            </form>
+                        </li>
                         <li class="Cart__Item">
                             <div class="Cart__ItemTitle">Some Item</div>
                             <form class="Cart__ItemMeta">
